<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <CheckBox
        android:id="@+id/cbNetworkMonitor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/network_monitor" />

    <CheckBox
        android:id="@+id/cbSMSLog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sms_log" />

    <CheckBox
        android:id="@+id/cbBoot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/boot" />

    <ToggleButton
        android:id="@+id/tbSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:checked="false"
        android:enabled="false"/>

</LinearLayout>